--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "pastore-cli",
-  "version": "0.2.2",
+  "version": "0.2.4",
   "description": "Keep your passwords safe",
   "main": "build/index.js",
   "scripts": {
@@ -57,6 +57,7 @@
   "dependencies": {
     "chalk": "^1.1.3",
     "commander": "^2.9.0",
+    "fuse.js": "^2.6.1",
     "pastore": "^0.3.8"
   }
 }
