--- a/package.json
+++ b/package.json
@@ -56,8 +56,10 @@
   },
   "dependencies": {
     "chalk": "^1.1.3",
-    "commander": "^2.9.0",
     "fuse.js": "^2.6.1",
-    "pastore": "^0.3.8"
+    "pastore": "^0.4.5",
+    "redux": "^3.6.0",
+    "redux-thunk": "^2.1.0",
+    "require-directory": "^2.1.1"
   }
 }
